fix task modal and make events dropdown searchable